@@ -5449,3 +5449,8 @@ Wed Jan  4 03:44:04 2006                        Michael Jennings (mej)
 
 X resource tracking/debugging support.
 ----------------------------------------------------------------------
+Wed Jan  4 04:14:14 2006                        Michael Jennings (mej)
+
+Applied patches from Tres Melton <tres@mindspring.com> for SSE2
+alignment and other shading-related issues.
+----------------------------------------------------------------------
